--- a/QTorder/src/main/resources/application.properties
+++ b/QTorder/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=debug
+
+spring.mvc.view.prefix=classpath:static/
+spring.mvc.view.suffix=.html
