--- a/QTorder/src/main/resources/application.properties
+++ b/QTorder/src/main/resources/application.properties
@@ -5,4 +5,6 @@ spring.datasource.password=kioni
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
 logging.level.org.hibernate.SQL=debug
