--- a/QTorder/src/main/resources/application.properties
+++ b/QTorder/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.url=jdbc:mysql://localhost:1118/qtorder?serverTimezone=UTC&cha
 spring.datasource.username=root
 spring.datasource.password=kioni
 
+spring.jpa.database=mysql
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.generate-ddl=true
