--- a/QTorder/src/main/resources/application.properties
+++ b/QTorder/src/main/resources/application.properties
@@ -8,5 +8,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=none
-logging.level.org.hibernate.SQL=debug
+spring.jpa.hibernate.ddl-auto=create
